@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-01T12:33:20Z",
+  "timestamp" : "2025-12-02T01:13:39Z",
   "count_outdated" : 10065,
   "uniques_outdated" : 5074,
-  "count" : 10117,
-  "uniques" : 5115,
+  "count" : 10121,
+  "uniques" : 5117,
   "clones" : [
     {
       "timestamp": "2025-11-19T00:00:00Z",
@@ -67,6 +67,15 @@
       "uniques": 10,
       "uniques_minmax": [ 10, 10 ],
       "uniques_decinc": [ 0, 10 ]
+    },
+    {
+      "timestamp": "2025-12-01T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
