@@ -1,6 +1,6 @@
 {
-  "count": 52,
-  "uniques": 34,
+  "count": 56,
+  "uniques": 36,
   "clones": [
     {
       "timestamp": "2025-11-19T00:00:00Z",
@@ -36,6 +36,11 @@
       "timestamp": "2025-11-30T00:00:00Z",
       "count": 13,
       "uniques": 10
+    },
+    {
+      "timestamp": "2025-12-01T00:00:00Z",
+      "count": 4,
+      "uniques": 2
     }
   ]
 }
